--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,21 @@ repositories {
 
 dependencies {
 
+  api group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+  api group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+  implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+  implementation group: 'io.jsonwebtoken', name: 'jjwt-gson', version: '0.11.2'
+
   implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
   testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
   testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.2.4'
   testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.6.0'
+  testCompile group: 'com.konghq', name: 'unirest-java', version: '3.11.03'
   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
   testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
   testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
+
 }
 
 
