--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
   id 'java-library'
   id 'idea'
   id 'com.diffplug.gradle.spotless' version '3.28.0'
+  id 'maven'
+  id 'signing'
 }
 
 sourceCompatibility = 8
@@ -26,8 +28,27 @@ ext {
 }
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
+
+task javadocJar(type: Jar) {
+  classifier = 'javadoc'
+  from javadoc
+}
+
+task sourcesJar(type: Jar) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+artifacts {
+  archives javadocJar, sourcesJar
+}
+
+signing {
+  sign configurations.archives
+}
+
 
 dependencies {
 
@@ -46,6 +67,52 @@ dependencies {
   testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
   testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
 
+}
+
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      pom.project {
+        name 'AuthKit Java Servlet Client'
+
+        packaging 'jar'
+
+        description 'OpenID and JWT client for Java Servlet Applications'
+        url 'https://authkit.com'
+
+        scm {
+          connection 'scm:git:git://github.com/authkitcom/authkit-java-servlet.git'
+          developerConnection 'scm:git:git://github.com/authkitcom/authkit-java-servlet.git'
+          url 'https://github.com/authkitcom/authkit-java-servlet'
+        }
+
+        licenses {
+          license {
+            name 'The Apache License, Version 2.0'
+            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          }
+        }
+
+        developers {
+          developer {
+            id 'btomasini'
+            name 'Ben Tomasini'
+            email 'btomasini@authkit.com'
+          }
+        }
+      }
+    }
+  }
 }
 
 
